
	* Add Eina_Condition API on Windows.

2011-05-17  Tom Hacohen (TAsn)

	* Added eina_binbuf: This is just like strbuf but for binary blobs.
	  Requested by discomfitor and honestly it looks needed.

2011-05-18  Cedric Bail

	* Fix eina_share_common_init to be called only once.

2011-05-24  Vincent Torri

	* Implement eina_sched_prio_drop() on Windows

2011-05-24  Cedric Bail

	* Add eina_inlist_sorted_insert.

2011-05-30  Cedric Bail

	* Add eina_condition_timedwait.

2011-05-31  Cedric Bail

	* Fix eina_hash_set to handle data == NULL like eina_hash_del.

2011-06-03  Vincent Torri

        * Fix static linking with eina (iconv could potentially not be
	passed to the linker)

2011-06-15  Cedric Bail

	* Add eina_hash_free_cb_set to change the free callback during the
	life of an Eina_Hash.

2011-06-23  Cedric Bail

	* Add Eina_LockRW.

2011-07-04  Carsten Haitzler (The Rasterman)

	* Add eina_mmap safety handling.

2011-07-29  Cedric Bail

	* Add eina_main_loop_is.

2011-08-03  Myungjae Lee

	* Fix eina_share_common_del and eina_share_common_ref to release lock on failure.

2011-09-05  Cedric Bail

	* Add eina_inlist_sorted_state_insert and helper.

2011-09-06  Tom Hacohen

	* Strbuf + Ustrbuf: Added eina_(u)strbuf_manage_new. This lets us
	take a string and use it as the string buffer instead of copying
	and allocating.

2011-09-15  Cedric Bail

	* Add eina_xattr_ls, eina_xattr_get, eina_xattr_set, eina_xattr_string_set,
	eina_xattr_string_get, eina_xattr_double_set, eina_xattr_double_get,
	eina_xattr_int_set, eina_xattr_int_get.

2011-11-10  Boris Faure (billiob)

	* Add new hash function eina_hash_murmur3 that should be better at
	hashing strings.

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release
        
2011-12-02  Mike Blumenkrantz (discomfitor/zmike)

        * Add eina_mempool_calloc for returning zeroed memory

2011-12-07  Mike Blumenkrantz (discomfitor/zmike)

        * eina_log*level_check() functions now return the correct value